K8s/nginx/statefulset.yml
kind: StatefulSet
apiVersion: apps/v1
metadata:
  name: mysql-statefulset
  namespace: mysql

spec:
  replicas: 3
  selector:
    matchLabels:
      app: mysql
  templates:
    metadata:
      lables:
        app:mysql
    spec:
      containers:
      - name: mysql
        image: mysql:8.0
        ports:
        - containerPort: 3306
      voluneClaimTemplates:
      - metadata:
         name: mysql-data
        spec:
          accessModes: ["ReadWriteOnce"]
          resources:
            requests:
              storage: 1Gi
